--- a/Gibbon.AI/Gibbon.AI.csproj
+++ b/Gibbon.AI/Gibbon.AI.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="OpenAI" Version="2.0.0-beta.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Gibbon.Common\Gibbon.Common.csproj" />
+    </ItemGroup>
+
 </Project>
