--- a/Gibbon.Common/Gibbon.Common.csproj
+++ b/Gibbon.Common/Gibbon.Common.csproj
@@ -11,4 +11,9 @@
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Extensions\" />
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
